change, variables store by __slots__

--- a/ganz_o2/ganz.ini
+++ b/ganz_o2/ganz.ini
@@ -1,29 +1,32 @@
+[DEFAULT]
+filename = ganz.ini
+
 [SENSOR]
 p0_ppm = 0.0
-p0_raw = -3628983.4903132315
+p0_raw = -6383322.03913133
 p1_ppm = 100.0
-p1_raw = 2101920.118126151
+p1_raw = -5704161.2816885095
 afe_drift_t = -235000
 lpf_sample_rate_hz = 1
 lpf_ripple_db = 36
 lpf_width_hz = 0.05
 lpf_cutoff_hz = 0.005
-modbus_port = COM4
+modbus_port = COM3
 modbus_baudrate = 19200
 modbus_address = 13
-tg = 1.7449255271496637e-05
-offset = 63.32305929852242
+tg = 0.00014724054489914944
+offset = 939.8838153084467
 
 [GRAPH]
 axlen = 64
-ppm_min = -50
-ppm_max = 150
+o2_min = -50
+o2_max = 150
 adc_raw_min = 0
 adc_raw_max = 10000000
-t_digc_min = 15
-t_digc_max = 45
-p_hpa_min = 950
-p_hpa_max = 1050
+t_digc_min = 28
+t_digc_max = 32
+p_hpa_min = 980
+p_hpa_max = 1020
 adc_mv_min = 0
 adc_mv_max = 2500
 
@@ -46,3 +49,4 @@ raw = 0.0
 [P ZERO]
 ppm = 0.0
 raw = 0.0
+
