cloned to desktop, sync

--- a/ganz_o2/ganz.025.ini
+++ b/ganz_o2/ganz.025.ini
@@ -4,23 +4,23 @@ filename = ganz.ini
 [SENSOR]
 p0_ppm = 0.0
 p0_raw = -6798484.086787677
-p1_ppm = 810.0
-p1_raw = 293419.26332033984
+p1_ppm = 100.0
+p1_raw = -5960486.766715668
 afe_drift_t = -235000
 lpf_sample_rate_hz = 1
 lpf_ripple_db = 36
-lpf_width_hz = 0.05
-lpf_cutoff_hz = 0.001
+lpf_width_hz = 0.01
+lpf_cutoff_hz = 0.025
 modbus_port = COM3
 modbus_baudrate = 19200
 modbus_address = 13
-tg = 0.00011421475449008521
-offset = 776.4871908772058
+tg = 0.00011933212386813717
+offset = 811.2775451601066
 
 [GRAPH]
 axlen = 64
 o2_min = -50
-o2_max = 1000
+o2_max = 150
 adc_raw_min = 0
 adc_raw_max = 10000000
 t_digc_min = 28
@@ -31,7 +31,7 @@ adc_mv_min = 0
 adc_mv_max = 2500
 
 [P HIGH]
-ppm = 810.0
+ppm = 100.0
 raw = 0.0
 
 [P 3]
