added ktemp routines

--- a/ganz_o2/ganz.ini
+++ b/ganz_o2/ganz.ini
@@ -16,6 +16,10 @@ modbus_baudrate = 19200
 modbus_address = 13
 tg = 0.00011421475449008521
 offset = 776.4871908772058
+ktemp_raw_0 = -7094001.235122658
+ktemp_raw_1 = -7112493.199384875
+ktemp_digc_0 = 30.477083206176758
+ktemp_digc_1 = 30.477083206176758
 
 [GRAPH]
 axlen = 64
