added Kpres routines, not tested

--- a/ganz_o2/ganz.ini
+++ b/ganz_o2/ganz.ini
@@ -3,9 +3,9 @@ filename = ganz.ini
 
 [SENSOR]
 p0_ppm = 0.0
-p0_raw = -6798484.086787677
+p0_raw = -6857895.711421132
 p1_ppm = 810.0
-p1_raw = 293419.26332033984
+p1_raw = 1191509.8958742018
 afe_drift_t = -235000
 lpf_sample_rate_hz = 1
 lpf_ripple_db = 36
@@ -14,16 +14,16 @@ lpf_cutoff_hz = 0.001
 modbus_port = COM3
 modbus_baudrate = 19200
 modbus_address = 13
-tg = 0.00011421475449008521
-offset = 776.4871908772058
+tg = 0.00010062854818322002
+offset = 690.1000890322395
 ktemp_raw_0 = -6822962.278325146
 ktemp_raw_1 = -6822013.3122611195
 ktemp_digc_0 = 30.577083587646484
 ktemp_digc_1 = 30.572917938232422
-kpres_raw_0 = -7168785.622482874
-kpres_raw_1 = -7174506.176495642
-kpres_hpa_0 = 1000.1044921875
-kpres_hpa_1 = 1000.352783203125
+kpres_raw_0 = 1189875.271693113
+kpres_raw_1 = 1081361.8939571371
+kpres_hpa_0 = 1010.58837890625
+kpres_hpa_1 = 1008.57421875
 
 [GRAPH]
 axlen = 64
