module sensor refactored

--- a/ganz_o2/ganz.ini
+++ b/ganz_o2/ganz.ini
@@ -2,13 +2,7 @@
 filename = ganz.ini
 
 [SENSOR]
-;p0_ppm = 0.0
-;p0_raw = -6798484.086787677
-;p1_ppm = 810.0
-;p1_raw = 293419.26332033984
 afe_drift_t = -235000
-;tg = 0.00011421475449008521
-;offset = 776.4871908772058
 
 [MODBUS]
 port = COM4
@@ -26,7 +20,7 @@ axlen = 64
 o2_min = -50
 o2_max = 1000
 adc_raw_min = 0
-adc_raw_max = 10000000
+adc_raw_max = 16777215
 t_digc_min = 28
 t_digc_max = 32
 p_hpa_min = 1000
@@ -36,7 +30,7 @@ adc_mv_max = 2500
 
 [P HIGH]
 ppm = 810.0
-raw = 0.0
+raw = 16571845.50785598
 
 [P 3]
 ppm = 3.0
@@ -51,5 +45,6 @@ ppm = 1.0
 raw = 0.0
 
 [P ZERO]
-ppm = 0.0
-raw = 0.0
+ppm = 100.0
+raw = 4985255.762312034
+
