added PID display

--- a/lib/ganz.ini
+++ b/lib/ganz.ini
@@ -1,15 +1,13 @@
 [DEFAULT]
 ini_path = ../../ini/
 ini_name = ganz.ini
-path = ../../ini/
-name = ganz.ini
-filename = ganz.ini
 
 [SENSOR]
 afe_drift_t = -235000
+coefficients = 0.0, 1.1, 2.2
 
 [MODBUS]
-port = COM3
+port = COM4
 baudrate = 19200
 address = 13
 
