V2 mb map added

--- a/ganz_o2/ganz.ini
+++ b/ganz_o2/ganz.ini
@@ -1,6 +1,5 @@
 [DEFAULT]
-ini_path = ../../ini/
-ini_name = ganz.ini
+filename = ganz.ini
 
 [SENSOR]
 afe_drift_t = -235000
@@ -13,11 +12,12 @@ address = 13
 [LPF]
 sample_rate_hz = 1
 ripple_db = 36
-width_hz = 0.05
-cutoff_hz = 0.001
+width_hz = 0.1
+cutoff_hz = 0.05
 
 [GRAPH]
 axlen = 64
+ax_gas = GAS, 0, 1000, blue, dotted, 2
 o2_min = -50
 o2_max = 1000
 adc_raw_min = 0
@@ -46,6 +46,18 @@ ppm = 1.0
 raw = 0.0
 
 [P ZERO]
-ppm = 0.0
+ppm = 10.0
 raw = 309631.7983521717
+
+[KTEMP]
+adc_0_raw = 9515148
+t0_digc = 11.09375
+adc_1_raw = 9523849
+t1_digc = 30.116666793823242
+
+[KPRES]
+adc_0_raw = 6171208
+p0_hpa = 1012.942138671875
+adc_1_raw = 9534350
+p1_hpa = 1013.47509765625
 
