--- a/ganz_o2/ganz.ini
+++ b/ganz_o2/ganz.ini
@@ -19,35 +19,40 @@ cutoff_hz = 0.05
 axlen = 64
 ax_gas = GAS, 0, 1000, blue, dotted, 2
 o2_min = -50
-o2_max = 1000
+o2_max = 150
 adc_raw_min = 0
 adc_raw_max = 16777215
 t_digc_min = 28
 t_digc_max = 32
-p_hpa_min = 1000
-p_hpa_max = 1020
+p_hpa_min = 950
+p_hpa_max = 1050
 adc_mv_min = 0
 adc_mv_max = 2500
 
-[P HIGH]
-ppm = 100.0
-raw = 1219458.2320520128
+[P SPAN]
+timestamp = 0
+ppm = 99.7
+raw = 11247870.775762094
 
 [P 3]
+timestamp = 0
 ppm = 3.0
 raw = 0.0
 
 [P 2]
+timestamp = 0
 ppm = 2.0
 raw = 0.0
 
 [P 1]
+timestamp = 0
 ppm = 1.0
 raw = 0.0
 
 [P ZERO]
-ppm = 10.0
-raw = 309631.7983521717
+timestamp = 0
+ppm = 0.0
+raw = 2479689.393667044
 
 [KTEMP]
 adc_0_raw = 9515148
@@ -56,8 +61,8 @@ adc_1_raw = 9523849
 t1_digc = 30.116666793823242
 
 [KPRES]
-adc_0_raw = 6171208
-p0_hpa = 1012.942138671875
-adc_1_raw = 9534350
-p1_hpa = 1013.47509765625
+adc_0_raw = 3547743
+p0_hpa = 992.95703125
+adc_1_raw = 3513747
+p1_hpa = 1012.2998046875
 
