--- a/ganz_o2/ganz.ini
+++ b/ganz_o2/ganz.ini
@@ -5,7 +5,7 @@ filename = ganz.ini
 afe_drift_t = -235000
 
 [MODBUS]
-port = COM4
+port = COM3
 baudrate = 19200
 address = 13
 
@@ -19,11 +19,11 @@ cutoff_hz = 0.05
 axlen = 64
 ax_gas = GAS, 0, 1000, blue, dotted, 2
 o2_min = -50
-o2_max = 150
+o2_max = 1000
 adc_raw_min = 0
 adc_raw_max = 16777215
-t_digc_min = 28
-t_digc_max = 32
+t_digc_min = 25
+t_digc_max = 35
 p_hpa_min = 950
 p_hpa_max = 1050
 adc_mv_min = 0
@@ -31,28 +31,25 @@ adc_mv_max = 2500
 
 [P SPAN]
 timestamp = 0
-ppm = 99.7
-raw = 11247870.775762094
+ppm = 99.6
+raw = 14955128.087582555
 
 [P 3]
-timestamp = 0
 ppm = 3.0
 raw = 0.0
 
 [P 2]
-timestamp = 0
 ppm = 2.0
 raw = 0.0
 
 [P 1]
-timestamp = 0
 ppm = 1.0
 raw = 0.0
 
 [P ZERO]
 timestamp = 0
 ppm = 0.0
-raw = 2479689.393667044
+raw = 496413.43680336565
 
 [KTEMP]
 adc_0_raw = 9515148
@@ -61,8 +58,8 @@ adc_1_raw = 9523849
 t1_digc = 30.116666793823242
 
 [KPRES]
-adc_0_raw = 3547743
-p0_hpa = 992.95703125
-adc_1_raw = 3513747
-p1_hpa = 1012.2998046875
+adc_0_raw = 6171208
+p0_hpa = 1012.942138671875
+adc_1_raw = 9534350
+p1_hpa = 1013.47509765625
 
