minor changes, plot related

--- a/lib/ganz.ini
+++ b/lib/ganz.ini
@@ -17,7 +17,7 @@ cutoff_hz = 0.05
 
 [GRAPH]
 axlen = 64
-ax_gas = GAS, 0, 1000, blue, dotted, 2
+;ax_gas = GAS, 0, 1000, blue, dotted, 2
 o2_min = -50
 o2_max = 150
 adc_raw_min = 0
@@ -28,6 +28,11 @@ p_hpa_min = 950
 p_hpa_max = 1050
 adc_mv_min = 0
 adc_mv_max = 2500
+
+[P ZERO]
+timestamp = 0
+ppm = 0.0
+raw = 2479689.393667044
 
 [P SPAN]
 timestamp = 0
@@ -48,11 +53,6 @@ raw = 0.0
 timestamp = 0
 ppm = 1.0
 raw = 0.0
-
-[P ZERO]
-timestamp = 0
-ppm = 0.0
-raw = 2479689.393667044
 
 [KTEMP]
 adc_0_raw = 9515148
