--- a/ganz_ch/ganz.ini
+++ b/ganz_ch/ganz.ini
@@ -1,40 +1,38 @@
 [DEFAULT]
-ini_path = ../../ini/
-ini_name = ganz.ini
-path = ../../ini/
-name = ganz.ini
-filename = ganz.ini
+config_path = ganz.ini
 
 [SENSOR]
+p0_ppm = 0.0
+p0_raw = -3628983.4903132315
+p1_ppm = 100.0
+p1_raw = 2101920.118126151
 afe_drift_t = -235000
-
-[MODBUS]
-port = COM6
-baudrate = 19200
-address = 13
-
-[LPF]
-sample_rate_hz = 1
-ripple_db = 36
-width_hz = 0.05
-cutoff_hz = 0.001
+lpf_sample_rate_hz = 1
+lpf_ripple_db = 36
+lpf_width_hz = 0.05
+lpf_cutoff_hz = 0.005
+modbus_port = COM3
+modbus_baudrate = 19200
+modbus_address = 13
+tg = 1.7449255271496637e-05
+offset = 63.32305929852242
 
 [GRAPH]
-axlen = 180
-o2_min = -50
-o2_max = 1000
+axlen = 64
+ppm_min = -50
+ppm_max = 150
 adc_raw_min = 0
-adc_raw_max = 16777215
-t_digc_min = 28
-t_digc_max = 32
-p_hpa_min = 1000
-p_hpa_max = 1020
+adc_raw_max = 10000000
+t_digc_min = 15
+t_digc_max = 45
+p_hpa_min = 950
+p_hpa_max = 1050
 adc_mv_min = 0
-adc_mv_max = 3300
+adc_mv_max = 2500
 
 [P HIGH]
 ppm = 100.0
-raw = 1219458.2320520128
+raw = 0.0
 
 [P 3]
 ppm = 3.0
@@ -50,5 +48,4 @@ raw = 0.0
 
 [P ZERO]
 ppm = 0.0
-raw = 309631.7983521717
-
+raw = 0.0
