minor updates, got .ini values

--- a/ganz_o2/ganz.ini
+++ b/ganz_o2/ganz.ini
@@ -5,7 +5,7 @@ config_path = ganz.ini
 afe_drift_t = -235000
 
 [MODBUS]
-port = COM4
+port = COM3
 baudrate = 19200
 address = 13
 
@@ -17,7 +17,6 @@ cutoff_hz = 0.05
 
 [GRAPH]
 axlen = 64
-ax_gas = GAS, 0, 1000, blue, dotted, 2
 o2_min = -50
 o2_max = 150
 adc_raw_min = 0
@@ -29,10 +28,15 @@ p_hpa_max = 1050
 adc_mv_min = 0
 adc_mv_max = 2500
 
+[P ZERO]
+timestamp = 0
+ppm = 0.0
+raw = 755591
+
 [P SPAN]
 timestamp = 0
 ppm = 99.7
-raw = 11247870.775762094
+raw = 15425723
 
 [P 3]
 timestamp = 0
@@ -48,11 +52,6 @@ raw = 0.0
 timestamp = 0
 ppm = 1.0
 raw = 0.0
-
-[P ZERO]
-timestamp = 0
-ppm = 0.0
-raw = 2479689.393667044
 
 [KTEMP]
 adc_0_raw = 9515148
