sensor routines changed

--- a/ganz_o2/ganz.ini
+++ b/ganz_o2/ganz.ini
@@ -31,12 +31,20 @@ adc_mv_max = 2500
 [P ZERO]
 timestamp = 0
 ppm = 0.0
-raw = 755591
+raw = 3635919
+temp_raw = 59088
+temp_digc = 29.066665649414062
+pres_raw = 4168005
+pres_hpa = 1017.579345703125
 
 [P SPAN]
 timestamp = 0
 ppm = 99.7
-raw = 15425723
+raw = 10315389
+temp_raw = 59066
+temp_digc = 29.020832061767578
+pres_raw = 4167357
+pres_hpa = 1017.421142578125
 
 [P 3]
 timestamp = 0
