--- a/lib/ganz.ini
+++ b/lib/ganz.ini
@@ -33,11 +33,19 @@ adc_mv_max = 2500
 timestamp = 0
 ppm = 0.0
 raw = 2479689.393667044
+temp_raw = 0
+temp_digc = 0
+pres_raw = 0
+pres_hpa = 0
 
 [P SPAN]
 timestamp = 0
 ppm = 99.7
 raw = 11247870.775762094
+temp_raw = 0
+temp_digc = 0
+pres_raw = 0
+pres_hpa = 0
 
 [P 3]
 timestamp = 0
