minor changes, sensor related

--- a/ganz_o2/ganz.ini
+++ b/ganz_o2/ganz.ini
@@ -5,7 +5,7 @@ config_path = ganz.ini
 afe_drift_t = -235000
 
 [MODBUS]
-port = COM3
+port = COM4
 baudrate = 19200
 address = 13
 
@@ -31,20 +31,20 @@ adc_mv_max = 2500
 [P ZERO]
 timestamp = 0
 ppm = 0.0
-raw = 4126032
-temp_raw = 59016
-temp_digc = 28.916667938232422
-pres_raw = 4168864
-pres_hpa = 1017.7890625
+raw = 3766329
+temp_raw = 59266
+temp_digc = 29.4375
+pres_raw = 4264248
+pres_hpa = 1041.076171875
 
 [P SPAN]
 timestamp = 0
-ppm = 99.7
-raw = 10315389
-temp_raw = 59066
-temp_digc = 29.020832061767578
-pres_raw = 4167357
-pres_hpa = 1017.421142578125
+ppm = 100.0
+raw = 8552338
+temp_raw = 59245
+temp_digc = 29.393749237060547
+pres_raw = 4263483
+pres_hpa = 1040.889404296875
 
 [P 3]
 timestamp = 0
