--- a/ganz_o2/ganz.ini
+++ b/ganz_o2/ganz.ini
@@ -18,9 +18,9 @@ cutoff_hz = 0.05
 [GRAPH]
 axlen = 64
 o2_min = -50
-o2_max = 150
+o2_max = 1050
 adc_raw_min = 0
-adc_raw_max = 16777215
+adc_raw_max = 4294967295
 t_digc_min = 28
 t_digc_max = 32
 p_hpa_min = 950
@@ -28,23 +28,23 @@ p_hpa_max = 1050
 adc_mv_min = 0
 adc_mv_max = 2500
 
-[P ZERO]
-timestamp = 0
-ppm = 0.0
-raw = 3766329
-temp_raw = 59266
-temp_digc = 29.4375
-pres_raw = 4264248
-pres_hpa = 1041.076171875
-
-[P SPAN]
+[SPAN SW]
 timestamp = 0
 ppm = 100.0
-raw = 8552338
-temp_raw = 59245
-temp_digc = 29.393749237060547
-pres_raw = 4263483
-pres_hpa = 1040.889404296875
+raw = 2271919
+temp_raw = 58460
+temp_digc = 27.758333206176758
+pres_raw = 4092840
+pres_hpa = 999.228515625
+
+[ZERO SW]
+timestamp = 0
+ppm = 0.0
+raw = 195318
+temp_raw = 58651
+temp_digc = 28.15625
+pres_raw = 4093092
+pres_hpa = 999.2900390625
 
 [P 3]
 timestamp = 0
